Bug 853454 - Fix non-normal audio channel visibility state error. r=baku